border and overflow fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -46,8 +46,8 @@ body{
 }
 
 .box{
-    padding: 20px;
-    margin: 15px;
+    padding: 30px;
+    margin: 10px;
     border-radius: 10px;
     align-items: center;
     justify-content: center;
@@ -101,7 +101,8 @@ body{
     display: flex;
     position: absolute;
     top: 30px;
-    /* margin-top: 300px;
+    height: 100px;
+    /* background-color: aqua;    /* margin-top: 300px; */
     margin-bottom: 100px; */
     /* height: 100vh; */
     /* justify-content: center;
@@ -114,22 +115,44 @@ body{
 .left-testimonials{
     display: flex;
     flex-direction: column;
+    /* flex-wrap: nowrap; */
     flex-basis: 75%;
-    height: 100%;
+    /* position: relative; */
+    height: 90vh;
+    /* justify-content:center; */
+    /* align-items: stretch; */
+    /* background-color: #A173E8; */
+    /* margin: 0px;
+    padding: px; */
+
+    
+
     /* flex-wrap: wrap; */
     }
 .top-row{
     display: flex;
-    height: 45vh;
+    height: auto;
+    /* flex-basis:  */
+
+    /* height: 45vh; */
+    
 }
 .bottom-row{
     display: flex;
-    height: 45vh;
+    height: auto;
+    /* align-content: flex-end;
+    align-items: flex-end;
+    margin-bottom: -200px; */
+    /* flex-basis: 100%; */
+
+
+
+    /* height: 45vh; */
 
 }
 .box1{
     flex-basis: 2fr;
-    
+   
     
 }
 .box2{
@@ -140,18 +163,30 @@ body{
 }
 .box4{
     flex-basis: 2fr;
+    /* align-self: flex-end; */
 }
 
 .right-container{
     
     flex-basis: 25%;
+    /* position: relative; */
+    height: auto;
+    /* height: 100vh; */
+    /* background-color: #c4b0e4; */
+    height: 90vh;
+
     
 }
 
 .box5{
     /* height: 400px; */
-    height: 86vh;
-    
+    height: auto;
+}
+
+.box5 .member-quote{
+    font-size: 13px;
+    line-height: 22.5px;
+    /* padding-bottom: ; */
 }
 
 .member-name{
@@ -169,7 +204,7 @@ font-size: 15px;
     padding-bottom: 15px;
 }
 .member-quote{
-    padding: 15px 0px;
+    /* padding: 15px 0px; */
     font-size: 14px;
     line-height: 22px;
 }
@@ -177,6 +212,10 @@ font-size: 15px;
    
     color: #A173E8;
 }
+.box-left{
+    /* height: 100%; */
+}
+
 
 @media all and (max-width: 500px){
     /* *{
